# slidev-linter

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  TECHNICAL_ARCHITECTURE.md  pyproject.toml  slidev_linter.py
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml
fixtures/: 01-bold-title.md  02-default-transition.md  03-section-transition.md  04-title-subtitle.md  05-spacing-after-title.md
fixtures/expected/: 01-bold-title.md  02-default-transition.md  03-section-transition.md  04-title-subtitle.md  05-spacing-after-title.md
src/slidev_linter/: __init__.py  cli.py  constants.py  engine.py  frontmatter.py  output.py  rules.py  selectors.py
src/slidev_linter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_cli.py  test_file_selection.py  test_fixtures_contract.py  test_rules.py
