[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slidev-linter"
version = "0.2.0"
description = "Format Slidev markdown slides consistently with lint/check/list workflows."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Th3Mouk" }]
dependencies = []

[dependency-groups]
dev = [
  "mypy>=1.20.0",
  "pytest>=9.0.3",
  "pytest-cov>=7.1.0",
  "ruff>=0.15.10",
]

[project.scripts]
slidev-linter = "slidev_linter.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"

[tool.coverage.run]
branch = true
source = ["slidev_linter"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"tests/conftest.py" = ["E402"]
"tests/*.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
disallow_untyped_defs = false
disallow_untyped_calls = false
warn_unused_configs = true
mypy_path = "src"
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["slidev_linter", "slidev_linter.*"]
strict = true

[[tool.mypy.overrides]]
module = ["tests.*", "conftest"]
disallow_untyped_defs = false
disallow_untyped_calls = false
